<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollView1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|left">

        <ImageView
            android:id="@+id/activity_detail_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/employee_photo"
            android:minHeight="150dp"
            android:minWidth="150dp"
            android:src="@drawable/employee_photo"/>

        <TextView
            android:id="@+id/activity_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/activity_detail_picture"
            android:text="@string/place_holder"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/activity_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/activity_detail_name"
            android:layout_below="@+id/activity_detail_name"
            android:text="@string/place_holder"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/activity_detail_department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/activity_detail_name"
            android:layout_below="@+id/activity_detail_title"
            android:text="@string/place_holder"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/activity_detail_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/activity_detail_name"
            android:layout_below="@+id/activity_detail_department"
            android:text="@string/place_holder"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/activity_detail_picture"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/detail_header1"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:id="@+id/activity_detail_office_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:layout_below="@+id/textView5"
            android:text="@string/place_holder"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/activity_detail_office_phone"
            android:layout_below="@+id/activity_detail_office_phone"
            android:layout_marginTop="25dp"
            android:text="@string/detail_header2"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:id="@+id/activity_detail_mobile_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView7"
            android:layout_below="@+id/textView7"
            android:text="@string/place_holder"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/activity_detail_mobile_phone"
            android:layout_below="@+id/activity_detail_mobile_phone"
            android:layout_marginTop="25dp"
            android:text="@string/detail_header3"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:id="@+id/activity_detail_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView9"
            android:layout_below="@+id/textView9"
            android:text="@string/place_holder"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/activity_detail_sms"
            android:layout_below="@+id/activity_detail_sms"
            android:layout_marginTop="25dp"
            android:text="@string/detail_header4"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:id="@+id/activity_detail_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView11"
            android:layout_below="@+id/textView11"
            android:text="@string/place_holder"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <ImageButton
            android:id="@+id/activity_detail_call_office_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/textView5"
            android:layout_marginRight="10dp"
            android:src="@drawable/phone"/>

        <ImageView
            android:id="@+id/activity_detail_call_mobile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/textView7"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:src="@drawable/phone"/>

        <ImageView
            android:id="@+id/activity_detail_send_sms_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/textView9"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:src="@drawable/sms"/>

        <ImageView
            android:id="@+id/activity_detail_send_email_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/textView11"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:src="@drawable/mail"/>
    </RelativeLayout>

</ScrollView>